2011-04-20  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Metrics pane editing and visual feedback improvements
        https://bugs.webkit.org/show_bug.cgi?id=58992

        Added visual feedback when hovering over the box model components of the Metrics pane
        and handling of the [Page]Up/Down keys when editing the box model values.

        * inspector/DOMNodeHighlighter.cpp:
        (WebCore::DOMNodeHighlighter::DrawNodeHighlight):
        * inspector/DOMNodeHighlighter.h:
        * inspector/Inspector.json:
        * inspector/InspectorDOMAgent.cpp:
        (WebCore::InspectorDOMAgent::mouseDidMoveOverElement):
        (WebCore::InspectorDOMAgent::highlight):
        (WebCore::InspectorDOMAgent::highlightDOMNode):
        (WebCore::InspectorDOMAgent::highlightFrame):
        (WebCore::InspectorDOMAgent::drawNodeHighlight):
        * inspector/InspectorDOMAgent.h:
        * inspector/front-end/CSSStyleModel.js:
        (WebInspector.CSSProperty.prototype.setText.callback):
        (WebInspector.CSSProperty.prototype.setText):
        (WebInspector.CSSProperty.prototype.setValue):
        (WebInspector.CSSProperty.prototype.setDisabled.callback):
        (WebInspector.CSSProperty.prototype.setDisabled):
        * inspector/front-end/ElementsPanel.js:
        (WebInspector.ElementsPanel.prototype.startEditingStyle):
        (WebInspector.ElementsPanel.prototype.endEditingStyle):
        (WebInspector.ElementsPanel.prototype._attributesUpdated):
        * inspector/front-end/MetricsSidebarPane.js:
        (WebInspector.MetricsSidebarPane):
        (WebInspector.MetricsSidebarPane.prototype._highlightDOMNode):
        (WebInspector.MetricsSidebarPane.prototype._highlightDOMNode.getBoxRectangleElement):
        (WebInspector.MetricsSidebarPane.prototype._update.createBoxPartElement):
        (WebInspector.MetricsSidebarPane.prototype._update):